update version, fix ui alignment, bug logout fix

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -67,6 +67,24 @@
   --padding-end: 5px;
 }
 
+.badge-two-del-e3 {
+  position: absolute;
+  top: 25px;
+  right: 71px;
+  font-size: 0.6em;
+  --padding-start: 3px;
+  --padding-end: 3px;
+}
+
+.badge-one-del-e3 {
+  position: absolute;
+  top: 18px;
+  right: 71px;
+  font-size: 0.6em;
+  --padding-start: 5px;
+  --padding-end: 5px;
+}
+
 
 .badge-one-cat-add {
   position: absolute;
